# karuta

./: .gitignore  README.org  dune-project  environment.el  flake.nix  result
examples/: l0.krt  l1.krt  l2.krt  l3-codegen.krt  l3.krt  triangular.krt
lib/: Ast.ml  CodeGenerator.ml  Compiler.ml  Debugger.ml  Evaluator.ml  Machine.ml  Parse.ml  Preprocessor.ml  RegisterAllocator.ml  Store.ml  ast.ml  ast.mli  compiler.ml  dune  evaluator.ml  index.mld  lexer.mll  machine.ml  parser.mly  store.ml
src/: Karuta.opam  dune-project
src/lib/: dune
test/: dune  run.t  say_hi.expected  say_hi.ml
