; More information on specifying libraries can be found in the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/concepts.html#libraries
; - https://dune.readthedocs.io/en/stable/dune-files.html#library

(env
 (dev
  (flags
   (:standard -w -8))))

(library
 (name lib)
 (modules ast store machine compiler evaluator parse parser lexer)
 (libraries batteries)
 (package karuta)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.std ppx_deriving.ord)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --trace))

(documentation
 (package karuta))
