(lang dune 3.6)
(using menhir 2.1)

(name Karuta)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Lemos" "Magueta" "Marinho")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Karuta)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune menhir)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
